text overflow corrected

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,6 +10,7 @@
   background-position: center center;
   cursor: pointer;
   border-radius: 2px;
+  padding: 0;
 }
 
 .profile__add-button:hover {
