--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,11 +2,13 @@
   margin-left: 30px;
   box-sizing: border-box;
   font-size: 0;
+  max-width: 60%;
 }
 
 @media (max-width: 767px) {
   .profile__info {
     margin-left: 0;
     margin-top: 26px;
+    max-width: 100%;
   }
 }
